--- a/Modulo1/Clase01/ejercicio06/servicios.html
+++ b/Modulo1/Clase01/ejercicio06/servicios.html
@@ -11,6 +11,6 @@
   <p>Esta es la pagina "servicios.html"</p>
 
   <p>Volver a <a href="index.html">la portada</a>.</p>
-<a href="index.html"> <img src="jdsfnsdkjf"  alt="Img : dirigete a la portada"></a>
+<a href="index.html"> <img src="http://lorempixel.com/100/100"  alt="Img : dirigete a la portada"></a>
 </body>
 </html>
