--- a/Modulo1/Clase01/ejercicio05/index.html
+++ b/Modulo1/Clase01/ejercicio05/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="author" content="Ronald Bardalez">
+  <meta name="author" content="Juan Carlos Ramos">
   <meta name="description" content="Este es mi primer sitio web">
   <meta name="keywords" content="web, html, curso">
   <title>Meta-tags</title>
-</head>
+</head>s
 <body>
   <p>Este documento no está vacío. Mira el código en un editor para revisar los "meta-tags" que contiene en su "head".</p>
 </body>
